Closed Bug 1129781 Opened 9 years ago Closed 9 years ago

Re-lookup JIT code return addr instead of caching the index for optimization info streaming

Categories

(Core :: Gecko Profiler, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla38
Tracking Status
firefox38 --- fixed

People

(Reporter: shu, Unassigned)

Details

Attachments

(1 file)

In bug 1127156 I saved both the return addr and the optimization info index into the circular buffer, since I thought, why look it up again?

I've since come around to only storing the addr and just re-lookup the optimization info index. Saves on circular buffer space and need to maintain one less tag.
This saves us some circular buffer space.
Attachment #8559573 - Flags: review?(kvijayan)
Attachment #8559573 - Flags: review?(kvijayan) → review+
https://hg.mozilla.org/mozilla-central/rev/9ca32c3e11cb
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: