Bug 1129781 - Re-lookup JIT code return addr when stringifying optimization info instead of caching the index. (r=djvj)

This saves us some circular buffer space.